Refactoring thr Codes

--- a/index.htm
+++ b/index.htm
@@ -173,6 +173,20 @@
                         </div>
                     </div>
                </div>
+
+               <!-- Website Potifolio -->
+               <div class="col-md-4 mt-3">
+                <div class="card">
+                    <img class="card-img" src="media/cofee.png" alt="">
+                    <div class="card-img-overlay main-card">
+                        <div class=" p-3">
+                        <h5 class="card-title" style="color: #fff">Customer Website</h5>
+                        <p class="card-text" style="color: #fff">Source Customer Domain</p>
+                        <a target="_blank" href="https://github.com/Josiahmpokera/UCC-Linux-Study-app-"><button class="btn btn-light" style="border-radius: 1px; background-color: black; color: #fff">View Project</button></a>
+                        </div>
+                    </div>
+                </div>
+           </div>
                
            </div>
            <!--Project Proposal Creation-->
