--- a/index.htm
+++ b/index.htm
@@ -182,7 +182,7 @@
                         <div class=" p-3">
                         <h5 class="card-title" style="color: #fff">Customer Website</h5>
                         <p class="card-text" style="color: #fff">Source Customer Domain</p>
-                        <a target="_blank" href="https://github.com/Josiahmpokera/UCC-Linux-Study-app-"><button class="btn btn-light" style="border-radius: 1px; background-color: black; color: #fff">View Project</button></a>
+                        <a target="_blank" href="https://jspremium.co.tz/"><button class="btn btn-light" style="border-radius: 1px; background-color: black; color: #fff">View Project</button></a>
                         </div>
                     </div>
                 </div>
